fix: showFooter=false 기본 padding 제거, 로그인 btnWrap 스타일 이전, 리뷰작성 페이지 여백 설정

--- a/src/pages/styles/Login.module.scss
+++ b/src/pages/styles/Login.module.scss
@@ -1,5 +1,41 @@
+@use "/src/app/styles/abstracts/mixins";
+@use "/src/app/styles/abstracts/variables" as var;
+
 .loginWrap {
   display: flex;
   flex-direction: column;
   height: 100%;
+}
+
+.btnWrap {
+  padding: 16px 16px 24px 16px;
+}
+
+.loginBtn {
+  margin-top: 16px;
+  padding: 16px;
+  width: 100%;
+  height: 56px;
+  gap: 16px;
+
+  @include mixins.apply-text-style(b1_bold);
+
+  border-radius: var.$radius-radius-lg;
+}
+
+.loginBtn.naverBtn {
+  margin-top: 0;
+  color: var.$semantic-text-icon-button-default;
+  background-color: #03c75a;
+}
+
+.loginBtn.googleBtn {
+  color: var.$semantic-text-icon-primary;
+  background-color: var.$semantic-background-primary;
+  border: 1px solid var.$semantic-border-primary;
+}
+
+.loginBtn.faceBtn {
+  color: var.$semantic-text-icon-button-default;
+  background-color: #1977f3;
 }
